<resources>
    <string name="app_name">Siswa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pembayaran_spinner">
        <item>Bayar Langsung</item>
        <item>Transfer Bank</item>
    </string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="sanggar_user">Nama Sanggar</string>
    <string name="error_input_must_more_than">must be at least %1$d character</string>
    <string name="error_cannot_be_zero">%1$s cannot be 0 if product available</string>
    <string name="error">Error</string>
    <string name="unprocessed_entity">Unprocessed Entity</string>
    <string name="no_connection">No Connection</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="io_exception">IO Exception</string>
    <string name="error_cannot_be_empty">%1$s cannot be empty</string>
    <string name="nama_user">Nama</string>
    <string name="username">Username</string>
    <string name="email_user">Email</string>
    <string name="password_user">Password</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="contoh_tanggal_lahir">Contoh: 2000-01-12</string>
    <string name="telepon_user">Nomor Telepon</string>
    <string name="nama_anak">Nama Anak</string>
    <string name="umur_anak">Umur</string>
    <string name="telepon_anak">Nomor Telepon</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="daftar">Pendaftaran Anak</string>
    <string name="menu_anak">Tambahkan, Edit, atau lihat Data Anak serta hasil belajar Anak </string>
    <string name="lihat_list_anak">Lihat Riwayat Pendaftaran Anak</string>
    <string name="riwayat_daftar_anak">Riwayat Pendaftaran Anak</string>
    <string name="riwayat_sewa">Riwayat Sewa Studio</string>
    <string name="teks_sewa">Sewa tempat latihan atau studio sanggarmu</string>
    <string name="sewa">Sewa Studio</string>
    <string name="tanggal_sewa">Pilih Tanggal Sewa</string>
    <string name="data_tanggal">yyyy-mm-dd</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="jam_selesai">Jam Selesai</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="upload_bukti_pembayaran">Sudah Booking? Upload Bukti Pembayaran Disini!</string>
    <string name="upload">Upload</string>
    <string name="kelas">Kelas</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="kegiatan">Kegiatan Sanggar</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="platform_transaksi">Platform Transaksi</string>
    <string name="lihat_studio"><u>Lihat Studio</u></string>
</resources>